# Pragmatic-Python

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  01_beginning.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  index.md  myst.yml  package.json  pyproject.toml  requirements.in  title.md
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
_includes/: book-layout.html  navigation.html  sidebar.html
_layouts/: default.html
_site/: README.md  index.html
_site/assets/css/: style.css
_site/docs/: Introduction.md
_site/docs/Introduction/: index.html
_site/scripts/: run-github-action-locally.sh
assets/css/: style.scss
chapters/: 01_beginning.md  02_tdd.md  preface.md  roadmap.md  title.md
codes/introduction/: words_counter.py
docs/: Introduction.md
pragmatic_python/: 01_beginning.md  _config.yml  _toc.yml  introduction.md  title.md
scripts/: run-github-action-locally.sh
