[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pragmatic-python"
version = "0.1.0"
description = "A practical guide to Python programming"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mdformat",
    "mdformat-gfm",
    "mdformat-frontmatter",
    "mdformat-footnote",
    "markdownlint-cli",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
lint = [
    "ruff>=0.1.5",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "pragmatic-python[dev,docs,lint,test]",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []
